2008-03-30	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* italc.spec.in:
	applied patch to build properly/better on recent openSUSE releases by  
	Lars Vogdt <lars/at/linux-schulserve/dot/.de>

2008-03-27	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/pt_br.qm:
	* ica/resources/pt_br.ts:
	* setup/setup.qrc:
	* setup/resources/pt_br.ts:
	* setup/resources/pt_br.qm:
	* ima/italc.qrc:
	* ima/resources/pt_br.ts:
	* ima/resources/pt_br.qm:
	* lib/italc_core.qrc:
	* lib/resources/pt_br.ts:
	* lib/resources/pt_br.qm:
	integrated localization-files for Brazilian Portuguese by
	Thomas Marques <thomasmarques/at/gmx/dot/net>

	* ima/src/side_bar_widget.cpp:
	* ima/src/tool_button.cpp:
	some color-fine-tunings

	* ima/src/client.cpp:
	improved painting of title-bar

2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>

	* client.cpp:
	client window if highlighted when selected

	* classroom_manager.cpp:
	* classroom_manager.h:
	client window is zoomed when pressed on manager list

2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/classroom_manager.cpp:
	arrange order is based on classroom manager list

2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/kmultitabbar.cpp:
	support for Qt 4.2
	
2008-03-27	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/vncview.cpp:
	fixed wrong calculation in mapToFramebuffer in case screen is scaled

2007-03-27	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ica/resources/it.ts:
	* ima/resources/it.ts:
	* lib/resources/it.ts:
	updated Italian localization

2008-03-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* setup/resources/pl.qm:
	* setup/resources/pl.ts:
	* ima/resources/pl.qm:
	* ima/resources/pl.ts:
	updated Polish localization-files by
	Robert Radko <robert/at/radko/dot/pl>

2008-03-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/remote_control_widget.cpp:
	* ima/src/tool_bar.h: