@@ -1,3 +1,15 @@
+2008-03-31	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* lib/include/vncview.h:
+	* lib/src/vncview.cpp:
+	fixed wrong mapping to framebuffer-coordinates
+
+	* lib/include/local_system.h:
+	* lib/src/local_system.cpp:
+	* ima/src/main_window.cpp:
+	always try to run demo-server on default-port 5858 - allows better
+	firewall-configuration in many places
+
 2008-03-30	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* italc.spec.in:
